--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </div>
         </div>
         <nav>
-            <a href="/" class="home-link">
+            <a href="/travel_recommender/travelRecommendation/travel_recommendation.html" class="home-link">
                 <img src="./images/airplane.png" alt="logo" class="logo"/>
                 <span>TravelBloom</span>
             </a>
