--- a/travel_recommendation.html
+++ b/travel_recommendation.html
@@ -17,14 +17,14 @@
             </div>
         </div>
         <nav>
-            <a href="/" class="home-link">
+            <a href="/travel_recommender/travel_recommendation.html" class="home-link">
                 <img src="./images/airplane.png" alt="logo" class="logo"/>
                 <span>TravelBloom</span>
             </a>
             <div class="links">
-                <a href="/travel_recommender/travelRecommendation/travel_recommendation.html">Home</a>
-                <a href="/travel_recommender/travelRecommendation/about_us.html">About Us</a>
-                <a href="/travel_recommender/travelRecommendation/contact_us.html">Contact Us</a>
+                <a href="/travel_recommender/travel_recommendation.html">Home</a>
+                <a href="/travel_recommender/about_us.html">About Us</a>
+                <a href="/travel_recommender/contact_us.html">Contact Us</a>
             </div>
             <div class="search_section">
                 <div class="input-div">
